# edbo

./: pyproject.toml
edbo/: acq_func.py  chem_utils.py  feature_utils.py  init_scheme.py  pd_utils.py
examples/mitsunobu_optimization/: optimization.py
examples/suzuki/: suzuki_optimization.py
examples/suzuki/data/: precatalyst_ligand_ohe.csv  suzuki_data.csv
experiments/: edbo_demo_and_simulations.py
