[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edbo"
version = "0.1.0"
description = "Experimental design via Bayesian optimization"
keywords = ['Bayesian Optimization', 'Chemical Reaction Optimization']
readme = "README.md"
license = 'MIT'
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "gpytorch>=1.14",
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "mordred[full]>=0.6.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pyclustering>=0.10.1.2",
    "pyro-ppl>=1.9.1",
    "rdkit>=2025.3.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Programming Language :: Python',
]

[project.urls]
Repository = "https://github.com/ctagard/edbo.git"

[tool.hatch.build]
packages = ["edbo"]
